# small-team-git

./: README.md  main.py  pyproject.toml  small-git.py  small-git2.py
